--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,8 @@
     <div class="main-nav">
                 
         <div class="logo">
-            <img src="img/m-logo.svg" alt="mv logo" width="150">
+<!--             <img src="img/m-logo.svg" alt="mv logo" width="150"> -->
+            <img src="{{site.baseurl}}/assets/img/m-logo.svg" alt="mv logo" width="150">
         </div>
     
         <nav class="nav-bar">
