--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,7 +9,7 @@ h1 {
 }
 
 .port-hero-image {
-    background:url("/img/mv-nav-image.gif") no-repeat center;
+    background:url("assets/img/mv-nav-image.gif") no-repeat center;
     background-size: cover;
     background-color: #d6d6d6;
     width:100%;
