--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -3,7 +3,7 @@
 }
 
 .hero-image {
-    background:url("/../../img/mv-nav-image.gif") no-repeat center;
+    background:url("../img/mv-nav-image.gif") no-repeat center;
     background-size: cover;
     background-color: #d6d6d6;
     width:100%;
