--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,16 @@
+body {
+    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
+}
+
+.about-me {
+    margin: 0 auto;
+    padding: 40px;
+    text-align: center;
+    max-width: 600px;
+    position: relative;
+}
+
 .body-copy {
     margin-top: -3%;
     text-align: justify;
