--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,10 +10,10 @@
         <nav class="nav-bar">
             <ul>   
                 <li>
-                    <a class="link" href="">HOME</a>
+                    <a class="link" href="{{site.baseurl}}/home">HOME</a>
                 </li>
                 <li>
-                    <a class="link" href="portfolio.html">PORTFOLIO</a>
+                    <a class="link" href="{{site.baseurl}}/portfolio">PORTFOLIO</a>
                 </li>       
             </ul>
         </nav>
