--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
         <nav class="nav-bar">
             <ul>   
                 <li>
-                    <a class="link" href="{{site.baseurl}}/home">HOME</a>
+                    <a class="link" href="{{site.baseurl}}/index">HOME</a>
                 </li>
                 <li>
                     <a class="link" href="{{site.baseurl}}/portfolio">PORTFOLIO</a>
