--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,6 +4,8 @@ layout: default
 
 <!-- NEW NEW -->
 
+<div class="port-container">
+
 <div class="grid-container">
     
     {% for post in site.posts %}
@@ -13,5 +15,7 @@ layout: default
         <div class="text">{{ post.title }}</div>
     </div>
     {% endfor %}
+
+</div>
 
 </div>
