--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,18 +4,4 @@ layout: default
 
 <!-- NEW NEW -->
 
-<div class="port-container">
-
-<div class="grid-container">
-    
-    {% for post in site.posts %}
-    <img src="{{site.baseurl}}/assets/img/{{post.img}}" alt="" class="image">
-
-    <div class="overlay">
-        <div class="text">{{ post.title }}</div>
-    </div>
-    {% endfor %}
-
-</div>
-
-</div>
+{{content}}
