--- a/_sass/var.scss
+++ b/_sass/var.scss
@@ -7,6 +7,6 @@ $base-color: #141414;
 
 // We can also use this area to import some basic elemets like fonts
 // Font Imports
-@import url('https://fonts.googleapis.com/css?family=Cabin|Roboto:300&display=swap');
 
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
